--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,10 +42,6 @@ p {
   color: #888;
 }
 
-ul a:hover{
-  color: white;
-}
-
 label {
   font-size: 14px;
   letter-spacing: 0;
@@ -132,6 +128,15 @@ ul{
 }
 ul.pagination li {
   margin-right: 10px;
+}
+
+ul.search-result a:hover {
+  color: white;
+}
+
+li.search-results {
+  text-align : left;
+  background-color: rgb(0, 128, 79);
 }
 
 ul.pagination li a {
@@ -585,6 +590,7 @@ ul.pagination li a {
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
   color: #666;
 }
+
 
 ul.pagination li a:hover {
   background-color: #5672f9 !important;
